删除多余内容
删除多余函数，页面，图片
调整APP配置

--- a/miniprogram/pages/disclaimer/disclaimer.wxml
+++ b/miniprogram/pages/disclaimer/disclaimer.wxml
@@ -3,7 +3,7 @@
 
 
   <text class='text'>免责声明</text>
-   <text class='text'>淮北便民信息以提供信息发布和查询为主,诣在更好的服务广大网民</text>
+   <text class='text'>枣庄便民信息以提供信息发布和查询为主,诣在更好的服务广大网民</text>
    <text class='text'> 本平台信息来自网络,本平台不声明或保证其内容的真实性和可靠性,</text>
      <text class='text'> 请自己认真辨明和核实由本平台信息导致的任何损失本平台概不负责 </text>
   
